--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -9,29 +9,5 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Check user variables
-        run: echo "${{ secrets.DOCKERHUB_USERNAME }} ${{ secrets.DOCKERHUB_TOKEN }}"
-
-      
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: user/app:latest
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2.5.0
