--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -16,4 +16,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: my-docker-hub-namespace/my-docker-hub-repository:latest
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/auto-push-test:latest
