--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,19 +1,19 @@
-name: Docker ci
-on: push
-jobs:
-  push_to_registry:
+name: Docker ci                                         # Define the name of the github actions
+on: push                                                # Execute on every push
+jobs:                                                   # List of jobbs
+  push_to_registry:                                     # First step which the job has to take
     name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest                              # Target image to execute the steps on
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+      - name: Check out the repo  
+        uses: actions/checkout@v2                       # Imports the actions/checkout@v2 repository
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+        uses: docker/login-action@v1                    # Imports the docker/login-action@v1 repository
+        with:                                           # Define username and password to authenticate docker
+          username: ${{ secrets.DOCKERHUB_USERNAME }}   # Secret variables are stored in the GitHub settings page
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
-        with:
-          push: true
+        with:                                           # Parameters used by the build-push-action@v2 repo
+          push: true    
           tags: ${{secrets.DOCKERHUB_USERNAME}}/auto-push-test:latest
